Fix spacing of jumbotron

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
 .jumbotron {
     border: black 5px;
-    width: 50%;
-    margin: 30%;
-    margin-top: 20%;
+    width: 40%;
+    margin: 10%;
+    align-self: center;
+    margin-left: 30%
 }
 
 .icons a {
@@ -18,14 +19,20 @@
     clear: left;
 }
 
-.lead {
-    float: left;
+.container {
+    display: block;
     text-align: center;
-
 }
 
 h1 {
     display: inline-block;
+    text-align: center;
+}
+
+h3 {
+    float: left;
+    align-self: center;
+    width: 100%;
 }
 
 p {
@@ -43,4 +50,17 @@ p {
 
 .bottomicons {
     margin-top: 200px;
+}
+
+@media screen and (max-width: 650px) {
+    h3 {
+        width: 100%;
+        float: left;
+        text-align: center;
+        margin-right: 200px;
+    }
+
+    .container {
+        text-align: auto;
+    }
 }
